style.css
/************* THEMES **************/
:root {
  --background-color: #ffffff;
  --bg-moods: #ffffff;
  --bg-selected-mood: #ffffff;
  --bg-wrapper: #ffffff;
  --bg-countdown: #ffffff;
  --bg-timezone: #ffffff;
  --text-color: #000000;
  --box-shadow-color: #a2c2f8;
  --stickman-outline-color: #000000;
  --stickman-inside-color: #fefefe;
  --bg-button: #ffffff;
  --bg-button-hover: #000000;
  --button-hover-text: #ffffff;
  --button-border-width: 3px;
  --button-modifier-color: #000000;
  --button-border-color: #000000;
  --button-border-width-modifier: 3px;
  --number-color: #ff0000;
}
/* saturated, square colors */
html[data-theme='color'] { 
  --background-color: #f2f6fd;
  --bg-moods:#bc3dff;
  --bg-selected-mood:#3de1ff;
  --bg-wrapper:#fd5454;
  --bg-countdown:#00fa92;
  --bg-timezone: #00fa92;
  --stickman-outline-color: #000000;
  --stickman-inside-color: #ffffff;
  --box-shadow-color: #adaeb0;
  --bg-button: #ffffff;
  --bg-button-hover: #3d61ff;
  --button-hover-text: #ffffff;
  --button-border-width: 3px;
  --button-border-color: #060606;
  --button-border-width-modifier: 3px;
  --number-color: #000000;
}
html[data-theme='dark'] {
  --background-color: #003852;
  --bg-moods: #001925;
  --bg-selected-mood: #001925;
  --bg-wrapper: #001925;
  --bg-countdown: #001925;
  --bg-timezone: #001925;
  --text-color: #f0f0f0;
  --box-shadow-color: #002130;
  --stickman-outline-color: #00aee3;
  --stickman-inside-color: #000000;
  --bg-button: #002a3e;
  --bg-button-hover: #000000;
  --button-hover-text: #ffffff;
  --button-border-width: 3px;
  --button-border-color: #00aee3;
  --button-border-width-modifier: 3px;
  --number-color: #ff0000;
}

/************* OVERALLS **************/
html {
  background-color: var(--background-color);
  font-family: 'Montserrat', sans-serif;
  color: var(--text-color);
  font-weight: bold;
  font-size: 23px;
  line-height: 30px;
}
html a {
  color: var(--text-color);
}
a:hover {
  color:#e73a34;
}
img {
  width: 550px;
  height: 350px;
  margin: 40px auto;
  max-width: 100%;
  min-width: 70%;
  position: relative;
  animation: glide 2s ease-in-out alternate infinite;
}

/************* BUTTONS **************/

/* shared button styles */
button {
  border: var(--button-border-width) solid var(--button-border-color);
  background-color: var(--bg-button);
  font: inherit;
  font-size: 27px;
  padding: 15px 21px;
  margin: 10px;
  cursor: pointer;
  box-shadow: 1px 1px 10px var(--box-shadow-color);
}
/* modifier styles for .action class */
button.action {
  color: var(--text-color);
  background-color: var(--bg-button);
  font-size: 23px;
  border: var(--button-border-width-modifier) solid var(--button-modifier-color);
}
button:hover {
  background-color: var(--bg-button-hover);
  color: var(--button-hover-text);
  box-shadow: none;
}
#theme {
  all: unset;
  cursor: pointer;
  font-size: 25px;
  display: flex;
  margin-right: auto;
  position:fixed;
  margin-top: -30px;
  z-index: 4;
}
.dialog {
  margin-top: 40px;
  font-size: 20px;
}

/*************** AREAS ****************/
#selected-mood, #countdown, #moods, #timezone, #stickman {
  box-shadow: 1px 5px 20px var(--box-shadow-color);
  padding: 50px 40px;
  margin: 10px 0 30px 0;
  border-radius: 10px;
}
#selected-mood {
  background-color: var(--bg-selected-mood);
}
#countdown {
  background-color: var(--bg-countdown);
}
#moods {
  background-color: var(--bg-moods);
  color: var(--text-color);
}
#timezone {
  background-color: var(--bg-timezone);
}
#stickman {
  height: 300px;
  position: relative;
  background-color: var(--bg-wrapper);
}

/*************** LAYOUT ***************/
.container {
  display: flex;
  flex-wrap: wrap;
}
.section {
  margin: 30px 10px;
  padding: 5px;
  text-align: center;
  flex: 1;
}

/*********** TABLE ************/
table {
  margin: auto;
}
th {
  padding: 5px 0px;
  text-align: center;
}
td.number {
  color:  var(--number-color);
  padding: 5px 25px 5px 0px;
  display: inline-block;
  width: 2em;
  text-align: right;
}
td.label {
  text-align: left;
}

/*********** ANIMATION ***********/
.stickman {
  border: 4px solid var(--stickman-outline-color);
  background-color: var(--stickman-inside-color);
  border-radius: 4px;
  display: block;
  position: absolute;
}
#head {
  width: 54px;
  height: 62px;
  border-radius: 50%;
  top: 47px;
  left: calc(50% - 32px);
  z-index: 1;
  transform-origin: center bottom;
}
#torso {
  width: 19px;
  height: 85px;
  top: 118px;
  z-index: 2;
  left: calc(50% - 14.5px);
}
#leftleg {
  width: 10px;
  height: 103px;
  top: 207px;
  z-index: 3;
  left: calc(50% - 15px);
  transform: rotate(15deg);
  transform-origin: top;
}
#rightleg {
  width: 10px;
  height: 103px;
  top: 207px;
  z-index: 1;
  left: calc(50% - 5px);
  transform: rotate(-12deg);
  transform-origin: top;
}
#leftarm {
  width: 80px;
  height: 8px;
  top: 120px;
  z-index: 3;
  left: calc(50% - 97px);
  transform: rotate(-70deg);
  transform-origin: 100%;
}
#rightarm {
  width: 77px;
  height: 8px;
  top: 120px;
  left: calc(50% + 4px);
  transform: rotate(70deg);
  transform-origin: 0%;
}
#leftfoot {
  width: 30px;
  height: 10px;
  z-index: 3;
  left: calc(50% - 9px);
  transform: rotate(-6deg);
  position: absolute;
  bottom: -15px;
}
#rightfoot {
  width: 30px;
  height: 10px;
  z-index: 3;
  left: calc(50% - 9px);
  transform: rotate(-6deg);
  position: absolute;
  bottom: -12px;
}

/******************* IMAGE GLIDE **********************/
@keyframes glide {
  from { 
    left: 0px; top: 0px; 
  }
  to { 
    left: 0px; top: 15px; 
  }
}

/******************* HEAD AND FOOT BOPPING **********************/
@keyframes wave {
  0% { transform: rotate(10deg); }
  50% { transform: rotate(-20deg); }
}
.foot-bopping {
  animation: wave 0.8s alternate infinite ease-in-out;
}
@keyframes rock {
  0% { transform: rotate(-15deg); }
  50% { transform: rotate(15deg); }
}
.head-bopping {
  animation: rock 0.8s alternate infinite;
}

/******************* TEMPO ANIMATIONS *******************/
@keyframes tempoSlow {
  0% { transform: rotate(-15deg); }
  50% { transform: rotate(15deg); }
}
.slow-tempo {
  animation: tempoSlow 1.5s alternate infinite ease-in-out;
}
@keyframes tempoMedium {
  0% { transform: rotate(-50deg); }
  50% { transform: rotate(50deg); }
  100% { transform: rotate(-50deg); }
}
.medium-tempo {
  animation: tempoMedium 0.6s alternate infinite ease-in-out;
}
@keyframes tempoFast {
  0% { transform: rotate(-30deg); }
  100% { transform: rotate(30deg); }
}
.fast-tempo {
  animation: tempoFast 0.1s alternate infinite ease-in-out;
}

/******************* STICKMAN SECTION SPIN *******************/
.area-spin {
  animation: tempoMedium 3s ease-in-out infinite;
}

/******************* ARMS *******************/

/* right leg rotate forward and backward */
@keyframes moveRightLeg {
  0% { transform: rotate(0deg); }
  50% { transform: rotate(30deg); }
  100% { transform: rotate(0deg); }
}

/* left leg to rotate in opposite direction */
@keyframes moveLeftLeg {
  0% { transform: rotate(0deg); }
  50% { transform: rotate(-30deg); }
  100% { transform: rotate(0deg); }
}

.dance-right-leg { 
  animation: moveRightLeg 1s ease-in-out infinite;
}

.dance-left-leg {
  animation: moveLeftLeg 1s ease-in-out infinite;
}

/******************* ARMS & LEGS *******************/
@keyframes moveLegsAndArms {
  0% { transform: rotate(0deg); }
  50% { transform: rotate(45deg); }
  100% { transform: rotate(0deg); }
}
.dance-move {
  animation: moveLegsAndArms 1s ease-in-out infinite;
}

/******************* MOOD DANCES : TODO *******************/
.dance-hopeful {
  animation: tempoSlow 2s ease-in-out infinite;
}
.dance-soulful {
  animation: tempoMedium 2s ease-in-out infinite;
}
.dance-chill {
  animation: tempoFast 1s infinite;
}
.dance-motivated {
  animation: tempoSlow 2s ease-in-out infinite;
}
.dance-party {
  animation: tempoMedium 0.5s infinite;
}
.dance-beachy {
  animation: tempoFast 2s ease-in-out infinite;
}
.dance-happy {
  animation: tempoSlow 2s ease-in-out infinite;
}
.dance-romantic {
  animation: tempoMedium 2s ease-in-out infinite;
}
.dance-pensive {
  animation: tempoFast 2s ease-in-out infinite;
}
.dance-rockandroll {
  animation: tempoSlow 2s ease-in-out infinite;
}
.dance-doowop {
  animation: tempoMedium 2s ease-in-out infinite;
}
.dance-taylor {
  animation: tempoFast 2s ease-in-out infinite;
}

/***************** MEDIA QUERIES ******************/
@media ( max-width: 1100px ) {
  html, button {
    font-size: 21px;
  }
  button {
    padding: 10px 16px;
  }
  .container {
    flex-direction: column;
  }
  .dialog {
    margin-top: 0px;
  }
  #moods, #countdown, #selected-mood {
    padding: 50px 20px;
  }
  #selected-mood, #stickman {
    padding: 50px 40px;
    margin: -40px 0 30px 0;
  }
  footer {
    position: relative;
    text-align: right;
    margin-top: 40px;
  }
}

